# haskell-dlib

./: .gitignore  .gitmodules  LICENSE  README.md  Setup.hs  haskell-dlib.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/flag-cache/: haskell-dlib-0.1.0.0-3fllyVSnE7s1R7uPGXF8Jy
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/lib/x86_64-linux-ghc-8.0.2/haskell-dlib-0.1.0.0-3fllyVSnE7s1R7uPGXF8Jy/Vision/: DLib.dyn_hi  DLib.hi
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/lib/x86_64-linux-ghc-8.0.2/haskell-dlib-0.1.0.0-3fllyVSnE7s1R7uPGXF8Jy/Vision/DLib/Algorithms/: ObjectDetection.hi
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/lib/x86_64-linux-ghc-8.0.2/haskell-dlib-0.1.0.0-3fllyVSnE7s1R7uPGXF8Jy/Vision/DLib/Types/: Array2D.hi  RGBPixel.dyn_hi  Rectangle.hi
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/pkgdb/: haskell-dlib-0.1.0.0-3fllyVSnE7s1R7uPGXF8Jy.conf  package.cache
app/: DNNFaceRecognition.hs  FaceLandmarkDetection.hs  Main.hs
include/: typedefs.h
src/Vision/: DLib.hs
src/Vision/DLib/: IO.cpp  IO.hs  Monad.hs  OpenCV.hs
src/Vision/DLib/Algorithms/: FeatureExtraction.cpp  FeatureExtraction.hs  ObjectDetection.cpp  ObjectDetection.hs
src/Vision/DLib/DNN/: TH.hs  Types.hs
src/Vision/DLib/GUI/: ImageWindow.cpp  ImageWindow.hs
src/Vision/DLib/Types/: Array2D.cpp  Array2D.hs  C.hs  CVImage.hs  Constants.c  Constants.cpp  Constants.hs  InlineC.hs  RGBPixel.hs  Rectangle.hs  Shape.cpp  Shape.hs  Vector.cpp  Vector.hs  Visualization.hs
test/: Spec.cpp  Spec.hs
