name:                haskell-dlib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-dlib#readme
license:             BSD3
license-file:        LICENSE
author:              Jordan Medlock
maintainer:          jordanemedlock@gmail.com
copyright:           2017 Jordan Medlock
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vision.DLib
  other-modules:       Vision.DLib.Types.Rectangle
                     , Vision.DLib.Types.Array2D
                     , Vision.DLib.Types.RGBPixel
                     , Vision.DLib.Algorithms.ObjectDetection
                     , Vision.DLib.Algorithms.FeatureExtraction
                     , Vision.DLib.Types.C
                     , Vision.DLib.Types.InlineC
                     , Vision.DLib.Types.Vector
                     , Vision.DLib.Types.Constants
                     , Vision.DLib.Types.Shape
  c-sources:           src/Vision/DLib/Algorithms/ObjectDetection.cpp
                     , src/Vision/DLib/Algorithms/FeatureExtraction.cpp
                     , src/Vision/DLib/Types/Array2D.cpp
                     , src/Vision/DLib/Types/Constants.cpp
                     , src/Vision/DLib/Types/Vector.cpp
                     , src/Vision/DLib/Types/Shape.cpp
                     , src/Vision/DLib/GUI/ImageWindow.cpp
  extra-libraries:     stdc++, dlib, lapack, blas
  CC-options:          -std=c++11
  include-dirs:        include
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , inline-c-cpp
                     , vector
                     , bytestring
                     , containers
                     , aeson
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , LambdaCase
                     , OverloadedStrings
                     , PolyKinds
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
TypeOperators

executable haskell-dlib-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , haskell-dlib
  default-language:    Haskell2010

test-suite haskell-dlib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-dlib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-dlib
