name:                haskell-dlib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-dlib#readme
license:             BSD3
license-file:        LICENSE
author:              Jordan Medlock
maintainer:          jordanemedlock@gmail.com
copyright:           2017 Jordan Medlock
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vision.DLib
                     , Vision.DLib.Monad
                     , Vision.DLib.DNN.Types
                     , Vision.DLib.DNN.TH
  other-modules:       Vision.DLib.Types.Rectangle
                     , Vision.DLib.Types.Array2D
                     , Vision.DLib.Types.RGBPixel
                     , Vision.DLib.Algorithms.ObjectDetection
                     , Vision.DLib.Algorithms.FeatureExtraction
                     , Vision.DLib.Types.C
                     , Vision.DLib.Types.InlineC
                     , Vision.DLib.Types.Vector
                     , Vision.DLib.Types.Shape
                     , Vision.DLib.GUI.ImageWindow
                     , Vision.DLib.IO
                     , Vision.DLib.OpenCV
  c-sources:           src/Vision/DLib/Algorithms/ObjectDetection.cpp
                     , src/Vision/DLib/Algorithms/FeatureExtraction.cpp
                     , src/Vision/DLib/Types/Array2D.cpp
                     , src/Vision/DLib/Types/Vector.cpp
                     , src/Vision/DLib/Types/Shape.cpp
                     , src/Vision/DLib/Types/Rectangle.cpp
                     , src/Vision/DLib/GUI/ImageWindow.cpp
                     , src/Vision/DLib/IO.cpp
                     , src/Vision/DLib/OpenCV.cpp
  extra-libraries:     stdc++, dlib, lapack, blas
  CC-options:          -std=c++11
  include-dirs:        include/
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , inline-c-cpp
                     , vector
                     , bytestring
                     , containers
                     , aeson
                     , filepath
                     , allocated-processor
                     , template-haskell
                     , free
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , LambdaCase
                     , OverloadedStrings
                     , PolyKinds
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators

executable face-landmark-detection 
  hs-source-dirs:      app
  main-is:             FaceLandmarkDetection.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , processor-utils
                     , allocated-processor
                     , haskell-dlib
  default-language:    Haskell2010


executable dnn-face-recognition
  hs-source-dirs:      app
  main-is:             DNNFaceRecognition.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , processor-utils
                     , allocated-processor
                     , haskell-dlib
  default-language:    Haskell2010

test-suite haskell-dlib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , inline-c
                     , inline-c-cpp
                     , directory
                     , haskell-dlib
  c-sources:           test/Spec.cpp
  CC-options:          -std=c++11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-dlib
